Minecraft loading working with shadowed jar, moving to dependency loading system.